src/objects/DataImport__c.object
<CustomObject>
    <fields>
        <fullName>Payment_ACH_Code__c</fullName>
        <description>The Standard Entry Class (SEC) code used for this ACH transaction.</description>
        <inlineHelpText>The Standard Entry Class (SEC) code used for this ACH transaction.</inlineHelpText>
        <label>Payment ACH Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_ACH_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_ACH_Last_4__c</fullName>
        <description>The last four digits of the bank account used for this transaction.</description>
        <inlineHelpText>The last four digits of the bank account used for this transaction.</inlineHelpText>
        <label>Payment ACH Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Authorization_Token__c</fullName>
        <description>Authorization token for a transaction.</description>
        <inlineHelpText>Authorization token for a transaction.</inlineHelpText>
        <label>Payment Authorization Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Authorized_Date__c</fullName>
        <description>The date and time the transaction was authorized.</description>
        <inlineHelpText>The date and time the transaction was authorized.</inlineHelpText>
        <label>Payment Authorized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Authorized_UTC_Timestamp__c</fullName>
        <description>The exact date and time (down to the millisecond) from the payment gateway that this transaction was successfully authorized.</description>
        <inlineHelpText>The exact date and time (down to the millisecond) from the payment gateway that this transaction was successfully authorized.</inlineHelpText>
        <label>Payment Authorized UTC Timestamp</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Card_Expiration_Month__c</fullName>
        <description>The expiration month of the card used for this transaction.</description>
        <inlineHelpText>The expiration month of the card used for this transaction.</inlineHelpText>
        <label>Payment Card Expiration Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Card_Expiration_Year__c</fullName>
        <description>The expiration year of the card used for this transaction.</description>
        <inlineHelpText>The expiration year of the card used for this transaction.</inlineHelpText>
        <label>Payment Card Expiration Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Card_Last_4__c</fullName>
        <description>The last four digits of the card used for this transaction.</description>
        <inlineHelpText>The last four digits of the card used for this transaction.</inlineHelpText>
        <label>Payment Card Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Card_Network__c</fullName>
        <description>The card network of the card used for this transaction.</description>
        <inlineHelpText>The card network of the card used for this transaction.</inlineHelpText>
        <label>Payment Card Network</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Check_Reference_Number__c</fullName>
        <inlineHelpText>Payment.npe01__Check_Reference_Number__c</inlineHelpText>
        <label>Payment Check/Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Declined_Reason__c</fullName>
        <inlineHelpText>Provides detail about why a transaction was declined.</inlineHelpText>
        <label>Payment Elevate API Declined Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Donor_Cover_Amount__c</fullName>
        <description>The amount the donor paid in addition to their donation amount, often to help cover transaction fees or to add a tip to their donation.</description>
        <inlineHelpText>The amount the donor paid in addition to their donation amount, often to help cover transaction fees or to add a tip to their donation.</inlineHelpText>
        <label>Payment Donor Cover Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Elevate_Created_Date__c</fullName>
        <description>The date and time the transaction was created.</description>
        <inlineHelpText>The date and time the transaction was created.</inlineHelpText>
        <label>Payment Elevate Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Elevate_Created_UTC_Timestamp__c</fullName>
        <description>The exact date and time (down to the millisecond) from Elevate that the transaction was created.</description>
        <inlineHelpText>The exact date and time (down to the millisecond) from Elevate that the transaction was created.</inlineHelpText>
        <label>Payment Elevate Created UTC  Timestamp</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Elevate_ID__c</fullName>
        <description>The unique ID for this transaction from Elevate.</description>
        <inlineHelpText>The unique ID for this transaction from Elevate.</inlineHelpText>
        <label>Payment Elevate ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Elevate_Original_Payment_ID__c</fullName>
        <description>For refunds only. Shows the ID of the original payment transaction from Elevate.</description>
        <inlineHelpText>For refunds only. Shows the ID of the original payment transaction from Elevate.</inlineHelpText>
        <label>Payment Elevate Original Payment ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Gateway_ID__c</fullName>
        <description>The ID of the payment gateway that processed this transaction.</description>
        <inlineHelpText>The ID of the payment gateway that processed this transaction.</inlineHelpText>
        <label>Payment Gateway ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Gateway_Payment_ID__c</fullName>
        <description>The unique ID for this transaction from the payment gateway.</description>
        <inlineHelpText>The unique ID for this transaction from the payment gateway.</inlineHelpText>
        <label>Payment Gateway Payment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <inlineHelpText>Payment.npe01__Payment_Method__c</inlineHelpText>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Origin_ID__c</fullName>
        <description>The ID for the system where the transaction was initiated.</description>
        <inlineHelpText>The ID for the system where the transaction was initiated.</inlineHelpText>
        <label>Payment Origin ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Origin_Name__c</fullName>
        <description>The name of the system where the transaction was initiated.</description>
        <inlineHelpText>The name of the system where the transaction was initiated.</inlineHelpText>
        <label>Payment Origin Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Origin_Type__c</fullName>
        <description>The type of system used to initiate the transaction. Available values include Engagement Hub, Giving Page, Payments API, Salesforce.</description>
        <inlineHelpText>The type of system used to initiate the transaction. Available values include Engagement Hub, Giving Page, Payments API, Salesforce.</inlineHelpText>
        <label>Payment Origin Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Paid__c</fullName>
        <description>Indicates if this payment is paid or not.</description>
        <inlineHelpText>Indicates if this payment is paid or not.</inlineHelpText>
        <label>Payment Paid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Possible_Matches__c</fullName>
        <description>A comma-separated list of Ids for the first 10 possible Payment matches for a Donation.</description>
        <inlineHelpText>A comma-separated list of Ids for the first 10 possible Payment matches for a Donation.</inlineHelpText>
        <label>Payment Possible Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <description>The API status of the transaction from Elevate.</description>
        <inlineHelpText>The API status of the transaction from Elevate.</inlineHelpText>
        <label>Payment Elevate API Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>Indicates the type of transaction.</description>
        <inlineHelpText>Indicates the type of transaction.</inlineHelpText>
        <label>Payment Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecurringDonationImportStatus__c</fullName>
        <description>The status from attempting to insert the Recurring Donation.</description>
        <inlineHelpText>The status from attempting to insert the Recurring Donation.</inlineHelpText>
        <label>Recurring Donation Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecurringDonationImported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the Recurring Donation if it was successfully created.</description>
        <inlineHelpText>A lookup to the Recurring Donation if it was successfully created.</inlineHelpText>
        <label>Recurring Donation Imported</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipLabel>NPSP Data Imports</relationshipLabel>
        <relationshipName>NPSP_Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Amount__c</fullName>
        <description>The amount for each installment Opportunity.</description>
        <inlineHelpText>The amount for each installment Opportunity.</inlineHelpText>
        <label>Recurring Donation Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Date_Established__c</fullName>
        <description>The initial inception date for this Recurring Donation. The default is the current date.</description>
        <inlineHelpText>The initial inception date for this Recurring Donation. The default is the current date.</inlineHelpText>
        <label>Recurring Donation Date Established</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Day_of_Month__c</fullName>
        <description>Sets the specific day of the month for future installment Opportunities when the Installment Period is Monthly. If you select 29 or 30, the installment date will be the last day of the month for months that don&apos;t have that many days.</description>
        <inlineHelpText>Sets the specific day of the month for future installment Opportunities when the Installment Period is Monthly. If you select 29 or 30, the installment date will be the last day of the month for months that don&apos;t have that many days.</inlineHelpText>
        <label>Recurring Donation Day of Month</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Effective_Date__c</fullName>
        <description>The date that new or updated schedule information (Amount, Day of Month, etc.) for this Recurring Donation takes effect. The default is the current date.</description>
        <inlineHelpText>The date that new or updated schedule information (Amount, Day of Month, etc.) for this Recurring Donation takes effect. The default is the current date.</inlineHelpText>
        <label>Recurring Donation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Elevate_Recurring_ID__c</fullName>
        <description>The external, unique ID of the related Recurring Donation in Elevate.</description>
        <externalId>true</externalId>
        <inlineHelpText>The external, unique ID of the related Recurring Donation in Elevate.</inlineHelpText>
        <label>Recurring Donation Elevate Recurring ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_End_Date__c</fullName>
        <description>After this date, NPSP no longer creates installments for this Recurring Donation and updates Status to Closed.</description>
        <inlineHelpText>After this date, NPSP no longer creates installments for this Recurring Donation and updates Status to Closed.</inlineHelpText>
        <label>Recurring Donation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Installment_Frequency__c</fullName>
        <description>The Installment Frequency along with Installment Period defines the installment schedule of this Recurring Donation. For example, if Installment Period is Monthly and Installment Frequency is 3, the schedule is defined as &quot;every 3 months&quot;.</description>
        <inlineHelpText>The Installment Frequency along with Installment Period defines the installment schedule of this Recurring Donation. For example, if Installment Period is Monthly and Installment Frequency is 3, the schedule is defined as &quot;every 3 months&quot;.</inlineHelpText>
        <label>Recurring Donation Installment Frequency</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Installment_Period__c</fullName>
        <description>The Installment Period along with Installment Frequency defines the installment schedule of this Recurring Donation. For example, if Installment Period is Monthly and Installment Frequency is 3, the schedule is defined as &quot;every 3 months&quot;.</description>
        <inlineHelpText>The Installment Period along with Installment Frequency defines the installment schedule of this Recurring Donation. For example, if Installment Period is Monthly and Installment Frequency is 3, the schedule is defined as &quot;every 3 months&quot;.</inlineHelpText>
        <label>Recurring Donation Installment Period</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Name__c</fullName>
        <description>Leave blank if you have a Recurring Donation Name Format selected. Otherwise, enter your own name.</description>
        <inlineHelpText>Leave blank if you have a Recurring Donation Name Format selected. Otherwise, enter your own name.</inlineHelpText>
        <label>Recurring Donation Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Payment_Method__c</fullName>
        <description>The form of payment for this Recurring Donation. NPSP automatically copies the selected value to each related Payment record.</description>
        <inlineHelpText>The form of payment for this Recurring Donation. NPSP automatically copies the selected value to each related Payment record.</inlineHelpText>
        <label>Recurring Donation Payment Method</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Planned_Installments__c</fullName>
        <description>Number of installments you expect to receive. Only used when Recurring Type is Fixed.</description>
        <inlineHelpText>Number of installments you expect to receive. Only used when Recurring Type is Fixed.</inlineHelpText>
        <label>Recurring Donation Planned Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Recurring_Type__c</fullName>
        <description>Open indicates an ongoing Recurring Donation. Fixed indicates a Recurring Donation that has a specific number of installments. For Fixed, you must also populate the Number of Planned Installments field.</description>
        <inlineHelpText>Open indicates an ongoing Recurring Donation. Fixed indicates a Recurring Donation that has a specific number of installments. For Fixed, you must also populate the Number of Planned Installments field.</inlineHelpText>
        <label>Recurring Donation Recurring Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Status_Reason__c</fullName>
        <description>The reason this Recurring Donation has its current Status value.</description>
        <inlineHelpText>The reason this Recurring Donation has its current Status value.</inlineHelpText>
        <label>Recurring Donation Status Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Status__c</fullName>
        <description>Indicates if this Recurring Donation is actively in use, temporarily suspended, or closed.</description>
        <inlineHelpText>Indicates if this Recurring Donation is actively in use, temporarily suspended, or closed.</inlineHelpText>
        <label>Recurring Donation Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the import for this record, for example, Imported or Failed.</description>
        <inlineHelpText>The status of the import for this record, for example, Imported or Failed.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready To Process</fullName>
                    <label>Ready to Process</label>
                </value>
                <value>
                    <fullName>Imported</fullName>
                </value>
                <value>
                    <fullName>Dry Run - Validated</fullName>
                </value>
                <value>
                    <fullName>Dry Run - Error</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>NPSP Data Import</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>FailureInformation__c</columns>
        <columns>Contact1_Firstname__c</columns>
        <columns>Contact1_Lastname__c</columns>
        <columns>Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Dry_Run_Errors</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>FailureInformation__c</columns>
        <columns>Contact1_Firstname__c</columns>
        <columns>Contact1_Lastname__c</columns>
        <columns>Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Dry Run - Error</value>
        </filters>
        <label>Dry Run - Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dry_Run_Validated</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>FailureInformation__c</columns>
        <columns>Contact1_Firstname__c</columns>
        <columns>Contact1_Lastname__c</columns>
        <columns>Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Dry Run - Validated</value>
        </filters>
        <label>Dry Run - Validated</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Failed_Data_Imports</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>FailureInformation__c</columns>
        <columns>Contact1_Firstname__c</columns>
        <columns>Contact1_Lastname__c</columns>
        <columns>Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>Failed Data Imports</label>
    </listViews>
    <listViews>
        <fullName>Succesfully_Imported</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>FailureInformation__c</columns>
        <columns>Contact1_Firstname__c</columns>
        <columns>Contact1_Lastname__c</columns>
        <columns>Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Imported</value>
        </filters>
        <label>Succesfully Imported</label>
    </listViews>
    <listViews>
        <fullName>To_Be_Imported</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>FailureInformation__c</columns>
        <columns>Contact1_Firstname__c</columns>
        <columns>Contact1_Lastname__c</columns>
        <columns>Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Imported</value>
        </filters>
        <label>To Be Imported</label>
    </listViews>
    <nameField>
        <displayFormat>DI-{000000}</displayFormat>
        <label>Data Import ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPSP Data Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>